# VideoDiscover

./: .gitignore  AGENTS.md  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: diagnostics.py  downloads.py  events.py  health.py  media.py  settings.py
backend/app/database/: migrations.py  models.py  repository.py  settings_repository.py
backend/app/downloader/: __init__.py  domain.py  executor.py  paths.py  repository.py  service.py  worker.py  yt_dlp_executor.py
backend/app/events/: __init__.py  broker.py
backend/app/media/: __init__.py  inspection.py  validation.py
backend/app/models/: diagnostics.py  downloads.py  inspection.py  media.py  settings.py
backend/app/system/: __init__.py  diagnostics.py  directory_chooser.py  download_directory.py  file_actions.py  settings_service.py
backend/migrations/: env.py
backend/migrations/versions/: 20260720_01_downloads.py  20260720_02_settings.py  20260720_03_result_location.py
backend/tests/: test_config.py  test_diagnostics.py  test_directory_chooser.py  test_download_api.py  test_download_directory.py  test_download_domain.py  test_download_paths.py  test_download_repository.py  test_download_service.py  test_download_worker.py  test_event_broker.py  test_file_actions.py  test_health.py  test_media_inspection.py  test_media_validation.py  test_settings_api.py  test_settings_repository.py  test_sqlite_repository.py  test_yt_dlp_executor.py
docs/: acceptance-criteria.md  acceptance-results.md  behavior-and-errors.md  functional-scope.md  (+7 more)
(+24 files in other folders)
