[project]
name = "video-downloader-backend"
version = "0.1.0"
description = "Local API for the Video Downloader MVP"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.139,<0.140",
    "httpx>=0.28,<0.29",
    "uvicorn[standard]>=0.35,<0.36",
    "yt-dlp[default,curl-cffi]>=2026.6.9,<2027",
]

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
    "ruff>=0.12,<0.13",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
